fixed background issue on mobile by switching from background-image to background-color

--- a/src/App.css
+++ b/src/App.css
@@ -4,30 +4,5 @@
 }
 .App {
   background-image: url('./assets/wallpaper.jpg');
-  background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: cover;
-  background-color: linear-gradient(
-    to top,
-    #400d18,
-    #722224,
-    #a33e28,
-    #cf6222,
-    #f48c06
-  );
-}
-
-@media only screen and (max-width: 769px) {
-  .App {
-    /* The file size of this background image is 93% smaller
-       to improve page load speed on mobile internet connections */
-    background-image: linear-gradient(
-      to top,
-      #400d18,
-      #722224,
-      #a33e28,
-      #cf6222,
-      #f48c06
-    );
-  }
 }
